--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container-fluid bio">
             <div class="row">
                 <div class="col">
-                    <p>Bem vindo ao Hub de Links. Se você tiver interesse em entrar em contato para questões relacionadas a trabalhos ou colaborações academicas, por favor envie um e-mail. Não hesite em se conectar comigo</p>
+                    <p>Aqui, você terá acesso a todas as minhas informações de contato e rede social, reunidas em um só lugar. Se você estiver interessado em trabalhos ou colaborações acadêmicas, por favor não hesite em me contactar através de e-mail. Espero vê-lo em breve</p>
                 </div>
             </div>
         </div>
